--- a/book1/page02/index.html
+++ b/book1/page02/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-<title>Dokunsal Kitaplık - Kitap 1 - Sayfa 2</title>
+  <title>Dokunsal Kitap - Kitap 1 - Sayfa 2</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Görme engelliler için dokunsal kitap">
+  <meta name="keywords" content="görme, engelliler için dokunsal kitap">
+  <meta name="author" content="Hale Uçuş, Haydar KULEKCI">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
-<h1>FOTOSENTEZ</h1>
-<img src="02.png">
-<p><a href="https://dokunsalkitaplik.com/book1">Kitap 1</a></p>
+    <h1>Fotosentez</h1>
+    <img src="02.png">
+    <p><a href="https://dokunsalkitaplik.com/book1">Kitap 1</a></p>
 
 </body>
 </html>
