--- a/book1/page05/index.html
+++ b/book1/page05/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <title>Dokunsal Kitap - Kitap 1 - Sayfa 1</title>
+  <title>Dokunsal Kitap - Kitap 1 - Sayfa 5</title>
   <meta charset="UTF-8">
   <meta name="description" content="Görme engelliler için dokunsal kitap">
-  <meta name="keywords" content="görme, engelliler için dokunsal kitap">
+  <meta name="keywords" content="görme engelliler için dokunsal kitap">
   <meta name="author" content="Hale Uçuş, Haydar KULEKCI">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../style.css">
 <body>
 
-    <h1>Merkezi Sinir Sistemi</h1>
-    <img src="01.png">
+    <h1>Sindirim Sistemi</h1>
+    <img src="05.png">
     <p><a href="https://dokunsalkitaplik.com/book1">Kitap 1</a></p>
 
 </body>
