--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 <h1>Dokunsal Kitaplık</h1>
-<p><a href="https://dokunsalkitaplik.com/book1/">Kitap 1</a></p>
+<p><a href="https://dokunduyogren.com/ornek-kitap/">Örnek Kitap</a></p>
 <p><a href="https://tactileimages.org/">Tactile Images</a></p>
 
 </body>
